--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>Create Form</title>
     <!-- Vue.js -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script>
     <!-- Bootstrap -->
@@ -26,7 +26,7 @@
   </head>
   <body>
     <div id="app">
-      <create-form ref="apple"></create-form>
+      <create-form ref="jun"></create-form>
     </div>
 
     <script>
