修正編輯模式下連續編輯題目舊題目被覆蓋的情形

--- a/index.html
+++ b/index.html
@@ -33,6 +33,37 @@
       const eventBus = new Vue();
     </script>
 
+    <!-- 單選題 & 複選題的模板 -->
+    <script type="text/x-template" id="haveBinding">
+      <div class="form-question" v-if="display">
+        <div class="form-question" v-if="display">
+          <div class="question-title">
+            <button type="button" class="btn btn-sm btn-outline-success mr-3" @click="edit(question)">編輯</button>
+            <span v-if="question.Required" class="badge badge-danger mr-1">必填</span>
+            <span v-if="ScoreMode" class="badge badge-info mr-2">計分</span>
+            <h4>{{ index + 1}}.  {{ question.Title }}</h4>
+          </div>
+          <div
+            class="question-option"
+            v-for="(item, index) in question.Options"
+            :key="index"
+          >
+            <button v-if="!editMode" type="button" class="btn btn-sm btn-outline-secondary mr-3" @click="binding(item)">綁定</button>
+            <input
+              :type="question.Type"
+              :id="item.Guid"
+              :value="item.Guid"
+              v-model="question.Answer"
+              @change="checkBinding(question, item)"
+            />
+            <label :for="item.Guid">{{ item.Value }}</label>
+            <p v-if="ScoreMode" class="ml-auto border-bottom">{{ item.OptionScore }}</p>
+            <p v-if="ScoreMode" class="ml-2">分</p>
+          </div>
+        </div>
+      </div>
+    </script>
+
     <script type="module" src="./js/createForm.js"></script>
   </body>
 </html>
