修改屬性名稱

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="question-title">
             <button type="button" class="btn btn-sm btn-outline-success mr-3" @click="edit(question)">編輯</button>
             <span v-if="question.Required" class="badge badge-danger mr-1">必填</span>
-            <span v-if="ScoreMode" class="badge badge-info mr-2">計分</span>
+            <span v-if="ScoreEnable" class="badge badge-info mr-2">計分</span>
             <h4>{{ index + 1}}.  {{ question.Title }}</h4>
           </div>
           <div
@@ -57,8 +57,8 @@
               @change="checkBinding(question, item)"
             />
             <label :for="item.Guid">{{ item.Value }}</label>
-            <p v-if="ScoreMode" class="ml-auto border-bottom">{{ item.OptionScore }}</p>
-            <p v-if="ScoreMode" class="ml-2">分</p>
+            <p v-if="ScoreEnable" class="ml-auto border-bottom">{{ item.Score }}</p>
+            <p v-if="ScoreEnable" class="ml-2">分</p>
           </div>
         </div>
       </div>
