修正題目標題過長跑版

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
       <div class="form-question" v-if="display">
         <div class="form-question" v-if="display">
           <div class="question-title">
-            <button type="button" class="btn btn-sm btn-outline-success mr-3" @click="edit(question)">編輯</button>
+            <button type="button" class="btn btn-sm btn-outline-success mr-2" @click="edit(question)">編輯</button>
             <span v-if="question.Required" class="badge badge-danger mr-1">必填</span>
             <span v-if="ScoreEnable" class="badge badge-info mr-2">計分</span>
-            <h4>{{ index + 1}}.  {{ question.Title }}</h4>
+            <p>{{ index + 1}}.  {{ question.Title }}</p>
           </div>
           <div
             class="question-option"
